# mini_downloader

./: Cargo.toml  README.md
src/: chunk.rs  chunk_vec.rs  chunks.rs  download_task.rs  downloader.rs  lib.rs
tests/: download.rs
