[package]
name = "mini_downloader"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "fs", "macros"] }
anyhow = "1"
reqwest = "0.11"
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
bytes = "1"
indicatif = "0.17"
